# saas-backend-boilerplate

./: .gitignore  README.md  pyproject.toml  requirements.txt
main/jwt_auth/: admin.py  apps.py  managers.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
main/jwt_auth/migrations/: 0001_initial.py
main/main/: renderers.py  settings.py  urls.py  wsgi.py
main/session_auth/: urls.py  views.py
main/shared/: managers.py  models.py  renderers.py  serializers.py
main/shared/migrations/: 0001_initial.py
src/backend/: renderers.py  settings.py  urls.py
src/jwt_auth/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
src/jwt_auth/migrations/: 0001_initial.py
src/main/: settings.py  urls.py
src/qrcodes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/reset_password/: urls.py  utils.py  views.py
src/session_auth/: tests.py  views.py
src/shared/: serializers.py
src/shared/migrations/: 0001_initial.py
