[tool.poetry]
name = "saas-backend-boilerplate"
version = "0.1.0"
description = ""
authors = ["rxmi-bkd <boukadidarami0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
drf-standardized-errors = "^0.14.1"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
